# proxywhirl

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .security_implementation_plan  =1.3.0  AGENTS.md  ANALYTICS_COMPLETE.txt  ANALYTICS_IMPLEMENTATION_COMPLETE.md  BATCH_EXECUTION_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  ERROR_HANDLING_SUMMARY.md  EXPORT_FEATURE_SUMMARY.md  FINAL_WAVE4_SUMMARY.txt  GEMINI.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  METRICS_BASELINE.md  Makefile  OPTIMIZATION_SUMMARY.md  RATE_LIMITING_COMPLETE.md  RATE_LIMITING_IMPLEMENTATION_SUMMARY.md  README.md  RETRY_FAILOVER_FEATURE_COMPLETE.md  RETRY_FAILOVER_IMPLEMENTATION_SUMMARY.md  SECURITY_AUDIT_REPORT.md  SECURITY_DELIVERABLES.txt  SECURITY_IMPLEMENTATION_SUMMARY.md  TASKS.md  Taskfile.yml  WAVE4_FINAL_REPORT.md  WAVE4_FINAL_SUMMARY.md  WAVE4_INVENTORY.txt  WAVE4_QUICK_REFERENCE.md  WAVE4_STATUS.md  (+19 more)
.benchmarks/: README.md
.benchmarks/Darwin-CPython-3.13-64bit/: 0001_baseline.json
.benchmarks/Linux-CPython-3.10-64bit/: 0001_baseline.json
.benchmarks/Linux-CPython-3.11-64bit/: 0001_baseline.json
.benchmarks/Linux-CPython-3.12-64bit/: 0001_baseline.json
.benchmarks/Linux-CPython-3.13-64bit/: 0001_baseline.json
.benchmarks/Linux-CPython-3.9-64bit/: 0001_baseline.json
.claude/agents/: README.md  source-curator.md
.claude/session-state/: session.db
.codex/: auth.json  config.toml  history.jsonl  version.json
.github/: backend.instructions.md  copilot-instructions.md  dependabot.yml  deployment.instructions.md  devops.md  docs.instructions.md  frontend.instructions.md  pull_request_template.md  testing.instructions.md  todos.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml  performance-issue.yml  question.yml
.github/assets/: README.md  health_report.md
.github/chatmodes/: chatmode-research.md  copilot-instructions-research.md  proxywhirl.chatmode.md  proxywhirl1.chatmode.md  pw-swe.chatmode.md
.github/context/: GNUMake   2025-06-21.md  aiocache-docs.md  aiohttp-docs.md  black-docs.md  fastapi-docs.md  fumadocs-docs.md  httpx-docs.md  isort-docs.md  loguru-docs.md  mermaid-diagrams-docs.md  mermaid-docs-docs.md  mypy-docs.md  next-js-docs.md  pandas-docs.md  pnpm.io-docs.md  postcss-docs.md  pydantic-docs.md  pydantic-settings-docs.md  pylint-docs.md  (+14 more)
alembic/: env.py  script.py.mako
deploy/: docker-compose.yml
docs/: 003-REST-API-PROGRESS.md  AGENTS.md  ANALYTICS.md  ANALYTICS_IMPLEMENTATION.md  API-USAGE.md  CHANGELOG.md  CONFIGURATION_MANAGEMENT.md  CONTRIBUTING.md  DATA_EXPORT_GUIDE.md  DEPLOYMENT_GUIDE.md  DESIGN.md  GEO_TARGETED_STRATEGY_COMPLETION.md  MIGRATION_GUIDE_V2.md  Makefile  PERFORMANCE_BASED_STRATEGY_COMPLETION.md  PHASE2_4_HEALTH_MONITORING_COMPLETION.md  PHASE2_6_TTL_COMPLETION.md  PHASE2_STATUS.md  PHASE_10_PROGRESS.md  PHASE_9_COMPLETION.md  RATE_LIMITING.md  REST_API_IMPLEMENTATION_COMPLETE.md  REST_API_PROGRESS.md  RETRY_FAILOVER_GUIDE.md  SESSION_PERSISTENCE_STRATEGY_COMPLETION.md  STRUCTURED_LOGGING_IMPLEMENTATION.md  TROUBLESHOOTING.md  VERSION_COMPATIBILITY.md  api-examples-python.md  api-reference-v1.md  architecture.md  cli-reference.md  configuration-guide.md  configuration.md  database-backup.md  database-migrations.md  database-recovery.md  database-schema-design.md  deployment-backup-restore.md  deployment-blue-green.md  (+35 more)
examples/: .env.example  README.md  _common.py  analytics_example.py  async_example.py  basic_usage.py  browser_rendering_example.py  catalog.json  cli_examples.sh  config_management_example.py  data_export_example.py  examples.ipynb  health_monitoring_example.py  key_rotation_demo.py  key_rotation_quickstart.md  logging_example.py  mcp_usage.py  notebook.ipynb  prometheus.yml  rate_limiting_example.py  retry_examples.py  rotation_strategies_example.py  safe_regex_usage.py  structured_logging_demo.py  tui_demo.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts
lists/: README.md
logs/: .gitkeep
proxywhirl/: __init__.py  __main__.py  _proxy_views.py  ab_testing.py  adaptive_selector.py  advanced_logging.py  affinity.py  alert_manager.py  analytics_engine.py  analytics_models.py  api.py  api_models.py  api_server.py  api_versioning.py  async_client.py  async_fetch_timeout.py  async_pool_cleanup.py  audit_trail.py  auth.py  benchmarks.py  blue_green_deployment.py  browser.py  cache.py  cache_crypto.py  cache_models.py  cache_optimization.py  cache_prewarmer.py  cache_smart.py  cache_tiers.py  canary_deployment.py  circuit_breaker.py  circuit_breaker_async.py  circuit_breaker_monitoring.py  circuit_breaker_tuning.py  cli.py  cli_batch.py  cli_concurrency.py  cli_config_templates.py  cli_config_wizard.py  cli_history.py  (+195 more)
scripts/: aggregate_proxies.py  curate_sources.py  generate_stats.py  test_migrations.py  update_readme_stats.py  update_test_imports.py  validate-package-managers.sh
tests/: AGENTS.md  conftest.py  conftest_factories.py  test___init__.py  test___main__.py  test_api_v1_compat.py  test_api_v2_validation.py  test_async_context.py  test_browser_failures.py  test_cache.py  test_cache_coherence.py  test_cache_eviction.py  test_cache_prewarmer.py  test_cache_stampede.py  test_cli.py  test_cli_e2e.py  test_config.py  test_config_manager.py  test_core.py  test_core_integration.py  test_distributed_cache.py  test_e2e.py  test_events.py  test_export_models.py  test_exporter.py  test_integration.py  test_logger.py  test_models.py  test_proxywhirl.py  test_regressions.py  test_rotator.py  test_security_hardening.py  test_settings.py  test_tui.py  test_utils.py  test_utils_common.py  test_validator.py  test_weighted_strategy_distribution.py
web/: AGENTS.md  eslint.config.mjs  index.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  source.config.ts  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
(+1443 files in other folders)
